# clang-samples

./: .gitignore  README.md  ast-visitor-4.0.1.patch  ast-visitor-7.0.0.patch  clean.sh  setup.sh
4.0.1/: CMakeLists.txt  RecursiveASTVisitor.h
4.0.1/src/: main.cpp
7.0.0/: CMakeLists.txt  RecursiveASTVisitor.h
7.0.0/src/: CMakeLists.txt  main.cpp
